src/main/java/com/example/AntiFraudSystem/errors/CardNotFoundException.java
package com.example.AntiFraudSystem.errors;

public class CardNotFoundException extends RuntimeException{

    public CardNotFoundException(String message) {
        super(message);
    }
}
